--- a/public/01_永續經營.html
+++ b/public/01_永續經營.html
@@ -14,6 +14,9 @@
 <link href="css/inner_ticket.css"     rel="stylesheet" type="text/css" />
 <link href="css/inner_all_common.css" rel="stylesheet" type="text/css" />
 <link href="css/common_list_menu.css" rel="stylesheet" type="text/css" />
+
+<link href="css/frog.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <!--以上為設計使用,不需要填入後台--> 
@@ -118,6 +121,7 @@ a.Interval2:hover { background:#cc6600}
     text-indent: 8px;
     margin-bottom: 23px;
     clear: both;
+
 }
 
 
