--- a/public/01_永續經營_m.html
+++ b/public/01_永續經營_m.html
@@ -8,7 +8,10 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <title>台灣高鐵</title>
+
 <link href="css/CSSDEV.css" rel="stylesheet" type="text/css" />
+<link href="css/frog_m.css" rel="stylesheet" type="text/css" />
+
 </head>
 <!--以上為設計使用,不需要填入後台--> 
 
