--- a/public/01_永續經營.html
+++ b/public/01_永續經營.html
@@ -7,15 +7,22 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <meta name="keywords" content="">
 <meta name="description" content="">
-<title>台灣高鐵</title>
-<link href="css/css_reset.css"      rel="stylesheet" type="text/css" />
-<link href="css/innerCommon.css"      rel="stylesheet" type="text/css" />
-<link href="css/inner_pngFix.css"     rel="stylesheet" type="text/css" />
-<link href="css/inner_ticket.css"     rel="stylesheet" type="text/css" />
+<title>thsrc</title>
+
+<link href="css/css_reset.css" rel="stylesheet" type="text/css" />
+<link href="css/inner_pngFix.css" rel="stylesheet" type="text/css" />
+<link href="css/inner_ticket.css" rel="stylesheet" type="text/css" />
+
+<link href="css/jquery-ui-1.8.5.custom.css" rel="stylesheet" type="text/css" />
+<link href="css/jquery.ui.datepicker.css" rel="stylesheet" type="text/css" />
+<link href="css/jquery.fancybox-1.3.1.css" rel="stylesheet" type="text/css" />
+
+<link href="css/innerCommon.css" rel="stylesheet" type="text/css" />
+<link href="css/faq.css" rel="stylesheet" type="text/css" />
 <link href="css/inner_all_common.css" rel="stylesheet" type="text/css" />
 <link href="css/common_list_menu.css" rel="stylesheet" type="text/css" />
 
-<link href="css/frog.css" rel="stylesheet" type="text/css" />
+
 
 </head>
 
@@ -23,12 +30,94 @@
 
 
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
+
 <style type="text/css">
 
 
+.clear {
+  clear: both; }
+
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table; }
+
+.clearfix:after {
+  clear: both; }
+
+.clearfix {
+  zoom: 1; }
+
+.questionnaire {
+  width: 100%;
+  margin-top: 30px; }
+
+.questionnaire h6 {
+  margin-bottom: 5px;
+  margin-top: 15px;
+  color: #222; }
+
+.questionnaire .check_item {
+  float: left;
+  margin-right: 20px; }
+
+.questionnaire .input_item {
+  float: left;
+  margin-right: 20px; }
+
+.questionnaire .input_item input[type=text] {
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 14px;
+  color: #222;
+  border: 1px solid #c0c0c0; }
+
+.questionnaire .input_item input::-webkit-input-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input::-moz-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input:-ms-input-placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item input::placeholder {
+  color: #eee;
+  font-weight: 100; }
+
+.questionnaire .input_item textarea {
+  width: 450px; }
+
+.questionnaire table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px; }
+
+.questionnaire table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px; }
+
+.faq_for_half {
+  width: 50%;
+  float: left; }
+
+.faq_form label {
+  width: 120px; }
+
+.submit_m {
+  display: block;
+  width: 120px;
+  margin: 0 auto;
+  padding: 5px 0;
+  text-align: center;
+  background-color: #888;
+  color: #FFF; }
 
 
-
+  
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
@@ -121,9 +210,7 @@ a.Interval2:hover { background:#cc6600}
     text-indent: 8px;
     margin-bottom: 23px;
     clear: both;
-
 }
-
 
 </style>
 
