--- a/public/01_永續經營_m.html
+++ b/public/01_永續經營_m.html
@@ -126,8 +126,11 @@
   padding: 5px 0;
   text-align: center;
   background-color: #888;
-  color: #FFF; }
-
+  color: #FFF !important; }
+.bg_grey {
+    background-color: #f0f0f0;
+    padding: 10px;
+}
 
 
 
