--- a/public/06_利害關係人專區.html
+++ b/public/06_利害關係人專區.html
@@ -247,7 +247,7 @@ a.Interval2:hover { background:#cc6600}
 <div class="questionnaire">
 	<section class="common_content">
 		<section class="faq_form">
-			<div class="bg_grey out_div">
+			<div class="bg_grey out_div" style="padding:10px">
 	            <fieldset>
 	                <div class="">
 	                    <h6>您的身份? (複選)  </h6>
@@ -278,7 +278,7 @@ a.Interval2:hover { background:#cc6600}
 	                </div>
 	            </fieldset>
 	        </div>
- 			<div class="out_div" style="background: #f7f7f7">
+ 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
 				<fieldset>
 	                <div class="faq_for_half">
 	                    <label for="">姓名</label>
@@ -291,7 +291,7 @@ a.Interval2:hover { background:#cc6600}
 	            </fieldset>
             </div>
 
-            <div class="bg_grey out_div">
+            <div class="bg_grey out_div" style="padding: 10px">
 				<fieldset>
 					<h6>請問您是否曾經閱讀過台灣高鐵的企業社會責任報告書? </h6>
 	                <input type="radio" name="" id="Radio" value="1">            
@@ -301,7 +301,7 @@ a.Interval2:hover { background:#cc6600}
 	               	<label style=" width: auto; margin-right: 20px" for="Radio1">否</label>
 	            </fieldset>
             </div>
-			<div class="out_div" style="background: #f7f7f7">
+ 			<div class="out_div" style="background: #f7f7f7; padding: 10px">
 				<h6>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。 </h6>
 				<table>
 				 	<tr>
