--- a/public/a02_精神與永續使命.html
+++ b/public/a02_精神與永續使命.html
@@ -32,8 +32,6 @@
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
 
 <style type="text/css">
-
-
 .clear {
   clear: both; }
 
@@ -116,8 +114,34 @@
   background-color: #888;
   color: #FFF; }
 
+.table_desktop table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px;
+  width: 100%; }
 
-  
+.table_desktop table tr th {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  font-weight: bolder;
+  text-align: left; }
+
+.table_desktop table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  text-align: left; }
+
+.table_desktop table tr td p {
+  margin-bottom: 0; }
+
+.common_article img {
+  display: block;
+  margin: 50px auto; }
+
+
+  /*=======*/
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
@@ -220,59 +244,64 @@ a.Interval2:hover { background:#cc6600}
 
 
 <article class="common_article">
-<h1 class="title_h2">關鍵指標與績效</h1>
-<h3>2015和2016年績效亮點</h2>
-<div class="articleTitle">
-	<h2 class="articleTitleContent">運輸（Transportation）-安全運輸，拉近距離</h2>
-</div>
-<ul class="ul_kind1">
-	<li>自2007年營運以來，列車準點率及發車率皆達99%以上</li>
-	<li>營運迄今（2007年1月5日至2016年12月底）每組營運列車平均延誤時間為0.23分鐘</li>
-	<li>自2007年營運以來，持續維持良好的營運安全績效，因行車事故造成旅客之傷亡人數為0</li>
-	<li>我們研擬縝密的安全政策與措施，並設置營運及員工安全虛驚事件通報系統，不放過任何安全細節，2016年收到293次意見通報，處理達成率高達90.87%</li>
-	<li>強化台灣產業供應能力，推動採購在地化，於2015與2016年間的勞務採購皆超過9成以上，物料採購亦超過5成</li>
-	<li>2015年連續假期共疏運839.5萬人次，2016年連續假期共疏運1,169.4萬人次</li>
-</ul>
-<div class="articleTitle">
-<h2 class="articleTitleContent">科技（Technology）-創新低碳，暖心服務 </h2>
-</div>
-<ul class="ul_kind1">
-	<li>自主研發之系統「列車座位查詢系統（SMIS）」於2015年9月取得經濟部專利</li>
-	<li>於「第23屆智慧運輸世界大會」（23rd ITS World Congress Melbourne 2016）以「台灣高鐵智慧運輸服務系統」榮獲2016年ITS世界大會名人堂產業成就獎</li>
-	<li>「社團法人中華智慧運輸協會」舉辦之「2016年年會暨智慧運輸應用研討會」，本公司以「維修排程及基地管理智慧整合平台」獲頒智慧運輸應用獎</li>
-	<li>旅客滿意度近2年調查結果皆高達90%以上</li>
-	<li>2015年全年度載運之旅客里程數計算，較搭乘小客車大幅減少386,198公噸的CO2e，相當於1,302 座大安森林公園的植樹面積。2016年較搭乘小客車大幅減少419,534公噸的CO2e，相當於1,414座大安森林公園的植樹面積</li>
-	<li>2015年配合新增苗栗、彰化及雲林等3車站興建工程之綠色產品使用，採購金額達3,814萬元</li>
-	<li>烏日、燕巢及左營三基地2016年的太陽能發電量達6,891千度。2015年12月新增苗栗、彰化及雲林三站亦設置太陽能發電系統，其2016年發電量達2,138千度</li>
-	<li>全車隊於2016年1月完成「列車燈管更換 LED 計畫」。2013年11月至2016年12月底，累計節電334.5萬度及減少1,762公噸的CO2e</li>
-	<li>2016年11月燕巢總機廠參加經濟部水利署「105年節約用水績優單位選拔」，榮獲商業組節約用水績優單位之殊榮</li>
-</ul>
-<div class="articleTitle">
-<h2 class="articleTitleContent">在地（Taiwan）-繁榮在地，暢遊台灣</h2>
-</div>
-<ul class="ul_kind1">
-	<li>董事會於2016年通過「企業社會責任實務守則」，結合核心資源實踐企業社會責任</li>
-	<li>旅遊商品行程2015年高鐵假期130條以上，旅行社自組商品2,800條以上；2016年高鐵假期150條以上，旅行社自組商品3,000條以上</li>
-	<li>2015年快捷公車轉運人次4,859千人次，2016年5,110千人次</li>
-	<li>自2014年到2016年，我們每年皆贊助560,000元以促進學會與協會發展</li>
-	<li>2015年辦理35件參訪，參訪人數1,049人；2016年辦理35件，參訪人數844人</li>
-</ul>
+<h1 class="title_h2">精神與永續使命</h1>
 
-<div class="articleTitle">
-<h2 class="articleTitleContent">關懷（Touch）-價值創造，關懷社會</h2>
+<p>台灣高鐵秉持著五大價值觀： 明理（Sensibility）、紀律（Discipline）、創新（Innovation）、正直（Integrity）與效率（Efficiency）為經營發展的指導原則。台灣高鐵一路走來，始終秉持「Go Extra Mile」（有心，把事情做得更好）的理念，持續提升品質與安全，並依此為主題，在報告書中，揭露我們履行企業社會責任的踏實步伐，並彰顯我們真摯的服務精神，以拉近旅客與在地關係為使命，成為美好生活的連結者。
+</p>
+<p>台灣高鐵營運產生的外部效益展現於經濟、社會與環境面。於經濟面，我們縮短南北交通時間，增進時間成本效益，同時提升土地利用價值，亦藉由營運活動及服務促進在地與整體經濟發展；於社會面，我們提供高安全性交通工具，降低交通意外所產生的社會支出，並拉近人與人之間的距離；於環境面，台灣高鐵兼顧舒適、便利以及低碳、低污染、高效率等特性，且透過結合綠建築降低車站公共空間的環境影響。
+</p>
+<p>隨著國際間對永續經營的重視提升，外部利害關係人更加關注企業在治理、社會及環境面向的作為，台灣高鐵於2016年10月27日掛牌上市，成為台灣首家鐵路運輸業股票上市的公司，特許期延長，在在都展現著此刻為台灣高鐵將永續思維納入核心的絕佳契機。台灣高鐵的營運策略以「4T」；運輸（Transportation）、科技（Technology）、在地（Taiwan）及關懷（Touch）作為永續經營的元素，以追求長期利益為重點，在企業文化、發展藍圖及策略上進行適當地調整。我們同時也積極連結聯合國永續發展指標以及核心本業的永續經營措施，讓台灣與國際同步接軌。
+</p>
+
+<h3>台灣高鐵響應聯合國永續發展目標之措施</h3>
+
+
+<div class="table_desktop">
+	<table >
+		<tr >
+			<th style="width:20%">永續發展目標</th>
+			<th style="width:80%">台灣高鐵措施</th>
+		</tr>
+		<tr >
+			<td >確保有教無類、公平以及高品質的教育</td>
+			<td >與大專院校合作，透過產學合作與實習計畫促進台灣軌道業人才培育</td>
+		</tr>
+		<tr >
+			<td >促進包容且永續的經濟成長</td>
+			<td >各車站帶動當地經濟發展，且活化各地大眾交通工具的使用</td>
+		</tr>
+		<tr >
+			<td >建立具有韌性的基礎建設並加速創新</td>
+			<td >第一條台灣高速鐵路的基礎建設，提供在地高鐵建設的知識，並且積極推行在地化供應，提升在地廠商能力 <br>
+				持續檢視站體、設備及路線的耐候性，並適時提升設計門檻，打造具韌性之基礎設施</td>
+		</tr>
+		<tr >
+			<td >促使城市具包容、安全、韌性及永續性</td>
+			<td >串連不同城市，連結南北都會與鄉村資源，縮短交通時間，降低城鄉差距<br>
+				貼心的服務、軟硬體設備及配套措施，協助降低特定族群出遊的不便及門檻<br>
+				提升基礎設施之韌性</td>
+		</tr>
+		<tr >
+			<td >採取緊急措施以因應氣候變遷及其影響</td>
+			<td >除身為低碳運輸公共載具，提供旅客更綠色的選擇，我們亦透過節能駕駛與設備設定，持續提升並管理運行能效<br>
+				導入綠建築車站設計，搭配再生能源發電設施，從多面向降低環境衝擊<br>
+				透過氣候變遷調適等措施因應氣候對行車影響<br>
+			</td>
+		</tr>
+		<tr >
+			<td >促進土地的永續使用及維護生物多樣性</td>
+			<td >通過環保署環評，並且依據環評結果持續護育各地的環境與生物</td>
+		</tr>
+		<tr >
+			<td >全球夥伴關係</td>
+			<td >加入國際鐵道聯盟（UIC），透過該組織參與聯合國氣候變遷綱要公約NAZCA之氣候追蹤項目，共同承諾將依據1990年的排碳水準，2030年降低50%、2050年降低75%的排碳量</td>
+		</tr>
+		
+	</table>
 </div>
 
-<ul class="ul_kind1">
-	<li>培育員工不遺餘力，2015與2016年人均受訓時數分別為826小時與502小時，並於兩年中培育出59位內部合格講師</li>
-	<li>為確保員工健康，提供優於法令的健康檢查方案，2015與2016年皆超過2千名員工受惠</li>
-	<li>推廣鐵道產學合作，與四間大學合作共26個計畫案，並推廣大學生暑期實習與維修實習專案，於2015與2016年共有100位大專實習生，30位技術實習生參與計畫</li>
-	<li>2016年「台灣高鐵彰化站」獲紐約Architizer 主辦之第四屆「A+」國際建築獎車站類組全球網路票選第一名</li>
-	<li>「藝起來高鐵」2015年於高鐵6個站點舉辦71場次，2016年於高鐵9個站點舉辦136場次，兩年合計表演人數共有5,688人</li>
-	<li>2015年為兒福聯盟募得新臺幣11,221,026元，受惠孩童1000名；2016年為伊甸基金會募得善款新臺幣12,781,412元，受惠兒童611名</li>
-	<li>2015年微笑列車計畫受益者人數2,995名，累計贊助車票為新臺幣813,592元；2016年微笑列車計畫受益數8,132名，累計贊助車票達新臺幣2,308,010元</li>
-	<li>「八仙樂園事件救援醫護人員南援北運專案」，共有150個醫療救援團體提出申請，總計650筆申請案，開出近1,500張車票</li>
-	<li>「台南地震災區救援專案」共有130個救援團體提出申請，總計445筆申請案，開立近1,900張車票</li>
-</ul>
+
+
 </article>
 
 </div>
