--- a/public/a06_利害關係人專區.html
+++ b/public/a06_利害關係人專區.html
@@ -32,8 +32,6 @@
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
 
 <style type="text/css">
-
-
 .clear {
   clear: both; }
 
@@ -116,8 +114,34 @@
   background-color: #888;
   color: #FFF; }
 
+.table_desktop table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px;
+  width: 100%; }
 
-  
+.table_desktop table tr th {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  font-weight: bolder;
+  text-align: left; }
+
+.table_desktop table tr td {
+  border: 1px solid #c0c0c0;
+  padding: 8px 15px;
+  font-size: 14px;
+  text-align: left; }
+
+.table_desktop table tr td p {
+  margin-bottom: 0; }
+
+.common_article img {
+  display: block;
+  margin: 50px auto; }
+
+
+  /*=======*/
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
@@ -227,9 +251,264 @@ a.Interval2:hover { background:#cc6600}
 	</div>
 	<p>台灣高鐵的利害關係人廣泛多元，為呈現出具有代表性之利害關係人，我們參照AA1000 利害關係人參與標準（AA1000 Stakeholder Engagement Standard），依重要性篩選出八類重要利害關係人：旅客、社區居民、媒體、員工、股東/投資人、非政府組織（NGO）、供應商/承包商、政府/主管機關 台灣高鐵持續與不同利害關係人溝通合作，2015與2016年與主要8類利害關係人透過定期與不定期的多元溝通管道，激盪出不同的成效和產生多元化的社會價值。針對各利害關係人族群關注的議題，我們除透過下列管道溝通說明外，亦透過此報告書之對應章節進行溝通。</p>
 
+	<h3>重要利害關係人溝通績效</h3>
+	<div class="table_desktop">
+	<table >
+		<tr >
+			<th>利害關係人</th>
+			<th style="width:20%">溝通管道 </th>
+			<th style="width:20%">2015年重點溝通績效</th>
+			<th style="width:20%">2016年重點溝通績效</th>
+			<th style="width:20%">重要關注議題</th>
+		</tr>
+		<tr >
+			<td>旅客</td>
+			<td>	
+				•T Life台灣高鐵車上刊物（每月）  <br>	
+				•旅客滿意度調查（每年）<br>
+				•車站及列車服務人員 <br>
+				•公司企業網站 <br>
+				•顧客意見表 <br>
+				•客服專線 4066-3000 <br>
+				•台灣高鐵FB粉絲專頁 <br>
+				•高鐵局民意信箱 <br>
+				•政府各級機關或消費者保護機關來函轉知 </td>
+			<td>
+				•車站每季辦理一次弱勢團體搭乘高鐵活動，2015年車站共計協助31個弱勢團體搭車 <br>
+				•顧客意見表4,273件 <br>
+				•客服專線846,553通<br>
+			</td>
+			<td>車站每季辦理一次弱勢團體搭乘高鐵活動，2016年車站共計協助36個弱勢團體搭車<br>
+				•顧客意見表3,924件<br>
+				•客服專線861,497通</td>
+			<td>乘客權益<br>
+				災害預防與重大事件對策<br>
+				運輸安全管理<br>
+				產品價格<br>
+				產品/服務品質<br>
+				疏運與轉運服務<br>
+				氣候變遷調適策略</td>
+		</tr>
+		<tr >
+			<td>社區居民</td>
+			<td>地方環境生態組織<br>
+				•車站活動宣導與邀請 <br>
+				•新站參訪邀請 • 地方意見領袖、民代、縣鄉鎮市長…等 <br>
+				• 地區溝通會議 <br>
+				• 地方活動參與</td>
+			<td>•新竹老樹與土地伯公管理維護<br>
+				•贊助「水雉生態教育園區」<br>
+				•舉辦「寒冬送暖捐血傳愛」、「高速傳愛助學計劃」等活動 <br>
+				•新站參訪邀請（苗栗/彰化/雲林總計導覽340團體）</td>
+			<td>•新竹老樹與土地伯公管理維護 <br>
+				•贊助「水雉生態教育園區」<br>
+				•舉辦「寒冬送暖捐血傳愛」、「寄給媽咪一封愛的信」、「高速傳愛助學計畫」等活動 <br>
+				•南港站辦理25場港湖地區里民參訪
+				</td>
+			<td>運輸安全管理<br>
+				產品價格<br>
+				災害預防與重大事件對策<br>
+				產品/服務品質<br>
+				乘客權益</td>
+		</tr>
+		<tr >
+			<td>媒體</td>
+			<td>
+				<p>•報章雜誌</p>
+				<p>•記者會</p>
+				<p>•媒體參訪</p>
+				<p>•視事件需要主動與媒體溝通、受訪說明</p>
+			</td>
+			<td>
+				<p>•新聞稿113篇</p>
+				<p>•記者會11場</p>
+				<p>•媒體參訪2場</p>
+			</td>
+			<td>
+				<p>•新聞稿100篇</p>
+				<p>•記者會13場</p>
+				<p>•媒體參訪1場</p>
+			</td>
+			<td>
+				<p>災害預防與重大事件對策</p>
+				<p>運輸安全管理</p>
+				<p>營運策略</p>
+				<p>產品價格</p>
+				<p>創新服務</p>
+				<p>營運績效</p>
+			</td>
+		</tr>		
+		<tr >
+			<td>員工</td>
+			<td>
+				<p>•公司內部宣導（每月/每季）</p>
+				<p>•品質小組溝通</p>
+				<p>•形態小組溝通</p>
+				<p>•公司新人訓練「公司品質政策」課程，以及營運維修單位儲備幹部訓練「品質提升訓練」課程。</p>
+				<p>•品質月活動（每年）</p>
+				<p>•勞資會議（每三個月召開一次）</p>
+				<p>•虛驚通報電子信箱</p>
+				<p>•高速視野電子報（Newsletter）</p>
+				<p>•現場巡檢</p>
+				<p>•危害審查小組（HRG）會議(每月)</p>
+			</td>
+			<td>
+				<p>•年度召開提案審查會3次，辦理表揚大會1次</p>
+				<p>•11月辦理品質月活動，包含提案改善頒獎、軌道同業交流等等</p>
+				<p>•虛驚通報電子信箱293次</p>
+				<p>•高速視野篇數11期/177篇&每月平均點閱數1,093次</p>
+			</td>
+			<td>
+				<p>•年度召開提案審查會4次，辦理表揚大會1次，並辦理優秀提案人員出國參訪1次</p>
+				<p>•11月辦理品質月活動，包含提案改善頒獎、軌道同業交流、2場品管圈初賽及1場品管圈決賽等等</p>
+				<p>•虛驚通報電子信箱269次</p>
+				<p>•高速視野篇數12期/178篇&每月平均點閱數1,032次</p>
+			</td>
+			<td><p>勞動權益保障</p>
+				<p>員工培育與發展</p>
+				<p>運輸安全管理</p>
+				<p>災害預防與重大事件對策</p>
+				<p>招募與留任</p>
+				<p>營運績效</p>
+				<p>職業安全衛生</p>
+				<p>法規遵循</p>
+				<p>營運策略</p>
+				<p>公司治理</p>
+				<p>企業形象</p>
+			</td>
+		</tr>
+		<tr >
+			<td>股東/投資人</td>
+			<td>•股東大會（每年） •公司年報（每年）
+				•公開資訊觀測站 •公司企業網站-投資人關係 •台灣高鐵FB粉絲專頁 •發言人信箱</td>
+			<td>•2015/06/30股東常會
+				•2015/09/10股東臨時會</td>
+			<td>•2016/03/18 股東臨時會
+				•2016/06/24股東常會 •2016/09/09 法人說明會 •2016/09/20 業績說明會 •2016/11/23 法人說明會</td>
+			<td>營運績效
+				公司治理
+				營運策略
+				運輸安全管理
+				災害預防與重大事件對策
+				產品價格
+				法規遵循
+				企業形象
+				產品/服務品質
+				疏運與轉運服務</td>
+		</tr>
+		<tr >
+			<td>非政府組織（NGO）</td>
+			<td>
+				<p>•T Life台灣高鐵車上刊物（每月）</p>
+				<p>•座談會/協調會/說明會/研討會</p>
+				<p>•新聞稿</p>
+			</td>
+			<td>
+				<p>•受惠孩童1,000名（ 財團法人兒童福利聯盟文教基金會）募得款項新臺幣11,221,026元</p>
+				<p>•微笑列車計畫受益人數2,995名;累計贊助車票達813,592元</p>
+			</td>
+			<td>
+				<p>•受惠孩童611名（財團法人伊甸社會福利基金會）募得款項新臺幣12,781,412元</p>
+				<p>•微笑列車計畫 8,132名，贊助車票達2,308,010元整</p>
+			</td>
+			<td>
+				<p>災害預防與重大事件對策</p>
+				<p>運輸安全管理</p>
+				<p>乘客權益</p>
+				<p>生態衝擊管理</p>
+				<p>企業形象</p>
+				<p>疏運與轉運服務</p>
+			</td>
+		</tr>
+		<tr >
+			<td>供應商/承包商</td>
+			<td>
+				<p>•會議（每兩個月）•啟始會議危害告知</p>
+				<p>•資訊調查</p>
+				<p>•供應商/ 承包商會議</p>
+				<p>•上網公告</p>
+				<p>•出國訪商</p>
+				<p>•供應商評鑑與討論（新供應商、既有供應商驗收）</p>
+			</td>
+			<td>
+				<p>•定期每兩個月與保全承商開會</p>
+				<p>•ISO 9001:2008 驗證定期查核</p>
+				<p>•啟始會議危害告知170次</p>
+				<p>•上網公告321次</p>
+				<p>•評鑑與討論239 次</p>
+				<p>•ISO 9001:2008 驗證作業討論會議</p>
+		 	</td>
+			<td>
+				<p>•定期每兩個月與保全承商開會</p>
+				<p>•ISO 9001:2008 驗證定期查核</p>
+				<p>•啟始會議危害告知80次</p>
+				<p>•上網公告644次</p>
+				<p>•評鑑與討論275 次</p>
+				<p>•ISO 9001:2008 驗證作業討論會議</p>
+			</td>
+			<td>
+				<p>供應商管理</p>
+				<p>產品/服務品質</p>
+				<p>營運策略</p>
+				<p>運輸安全管理</p>
+				<p>災害預防與重大事件對策</p>
+			</td>
+		</tr>
+		<tr >
+			<td>政府/主管機關</td>
+			<td>
+				<p>•高鐵營運協調會報（每季）</p>
+				<p>•交通部/高鐵局辦理年度高鐵營運定期檢查（每年）</p>
+				<p>•大型緊急應變綜合演練（每兩年）</p>
+				<p>•監督機制（每年）</p>
+				<p>•業務拜訪</p>
+				<p>•宣導說明會</p>
+				<p>•會議說明</p>
+				<p>•臨時檢查</p>
+				<p>•品保查驗</p>
+			</td>
+			<td>
+				<p>•2015年12月16日台灣高鐵緊急應變綜合演練，包含高鐵沿線11縣市警消人員、鐵路警察局、交通部、高鐵局、消防署、行政院災防辦等中央單位災防業務聯繫窗口</p>
+				<p>•為「高鐵財務改善」、「新增三站班表改點」、「依行車時間定訂差別費率」等有關本司之議題，與立法委員或國會辦公室幕僚溝通說明，計252次會議</p>
+			</td>
+			<td>為「延伸南港站列車班表改點說明」、「增加北高直達車」、「直達車增停台南站」等有關本司之議題，與立法委員或國會辦公室幕僚溝通說明，計236次會議</td>
+			<td>
+				<p>運輸安全管理</p>
+				<p>災害預防與重大事件對策</p>
+				<p>產品/服務品質</p>
+				<p>法規遵循</p>
+				<p>乘客權益</p>
+				<p>疏運與轉運服務</p>
+				<p>產品價格</p>
+				<p>氣候變遷調適策略</p>
+			</td>
+		</tr>
+		
+
+
+
+
+	</table>
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">永續及社會效益</h2>
+	</div>
+	<p>此「高鐵財務解決方案」得以務實解決台灣高鐵因運量不如原預期、及沉重利息與折攤負擔產生的財務問題，但除此立即可見的效益外，特許期從35年延長至70年，意味著在治理、營運、發展規劃上，將更傾向從長期發展的角度來進行評估及決策，為永續發展打下更深的地基。當然，除能進一步落實永續思維外，此財務解決方案亦可達到全民、政府、銀行、股東四贏之結果。</p>	
+
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">國際會議-國際高速鐵路協會（IHRA）年會</h2>
+	</div>
+	<p>「國際高速鐵路協會」（IHRA, International High-Speed Rail Association）第五次年度會議於2016年5月11日首度在臺北舉辦，共有來自日本、澳洲、印度、美國、新加坡、馬來西亞、泰國、越南等國，50餘位國內外高速鐵路營運業者、專家以及政府相關部門共同參加。台灣高鐵與各國鐵道同業分享過去十餘年來的成功經驗，並與有意規劃高鐵建設的國家共同合作。
+	</p>
 	
-	<br>
-	<br>
+
+</div>
+
+
+
+
+
+
 
 	<div class="articleTitle">
 		<h2 class="articleTitleContent">利害關係人問卷</h2>
@@ -305,10 +584,10 @@ a.Interval2:hover { background:#cc6600}
 				<h6>下表為台灣高鐵企業社會責任報告書2015~2016年中所辨識出的重大性議題，供您參考以回答接下來的問卷題目。 </h6>
 				<table>
 				 	<tr>
-				 		<td>1.運輸安全管理</td>
-				 		<td>2.產品/服務品質</td>
-				 		<td>3.人文關懷與在地發展</td>
-				 		<td>4.供應商管理</td>
+				 		<td style="width:20%">1.運輸安全管理</td>
+				 		<td >2.產品/服務品質</td>
+				 		<td >3.人文關懷與在地發展</td>
+				 		<td >4.供應商管理</td>
 				 	</tr>
 				 	<tr>
 				 		<td>5.營運策略</td>
