--- a/public/c01_永續承諾.html
+++ b/public/c01_永續承諾.html
@@ -136,78 +136,22 @@ a.Interval2:hover { background:#cc6600}
 
 
 <article class="common_article">
-<h1 class="title_h2">永續經營</h1>
-<p>台灣高鐵財務改善方案從2014年10月24日提出後，歷經一連串的法律流程及調整後，於2015 年6 月5 日經立法院院會通過備查，而此版本的「高鐵財務解決方案」及立法院交通委員會附帶決議即成為落實台灣高鐵財務改善之依據及基礎。為讓大眾更了解我們財務方案之變革，展現永續經營的服務精神，下面特以圖說明財務解決方案架構。
-</p>
-
-<h3>財務解決方案架構</h3>
-
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-01.jpg" alt="" style="width: 70%">
-
-<div class="articleTitle">
-	<h2 class="articleTitleContent">財務解決方案執行狀況及時程</h2>
-</div>
-
-<div class="table_desktop">
-	<table >
-		<tr >
-			<th style="width:20%">日期</th>
-			<th style="width:80%">事件</th>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/06/05</td>
-			<td style="width:80%">立法院完成審議「高鐵財務解決方案」並准予備查</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/07/27</td>
-			<td style="width:80%">台灣高鐵與交通部簽署「興建營運合約第四次增修協議書」及「站區開發合約終止協議書」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/03</td>
-			<td style="width:80%">台灣高鐵與交通部、臺灣銀行簽署「三方契約第一次增修協議書」。台灣高鐵與臺灣銀行等銀行團簽署「聯合授信契約第二次增修契約」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/07</td>
-			<td style="width:80%">動用「資金專戶」之資金收回全數特別股股本<br>
-			2015年6 月25 日董事會決議，收回已發行流通在外之全部特別股股本新臺幣40,189,916,600元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/09/10</td>
-			<td style="width:80%">股東臨時會決議通過辦理「高鐵財務解決方案」各項配套措施 <br>
-			辦理減資60%以彌補虧損，減少實收資本額新臺幣39,079,395,890元，減資後實收資本額為新臺幣26,052,930,580元 <br>
-			辦理私募普通股增資新臺幣300億元以充實營運資金並改善財務結構，增資後實收資本額為新臺幣56,052,930,580元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/10/30</td>
-			<td style="width:80%">特許期延長35年開始生效</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/25</td>
-			<td style="width:80%">現金增資，公開發行普通股<br>
-				配合辦理股票初次上市作業，現金增資發行新股2,300萬股，增資後普通股股數由5,605,293,058股，增加為5,628,293,058股</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/27</td>
-			<td style="width:80%">台灣高鐵上市</td>
-		</tr>
-	</table>
-
+	<h1 class="title_h2">永續承諾</h1>
 	<div class="articleTitle">
-		<h2 class="articleTitleContent">永續及社會效益</h2>
+		<h2 class="articleTitleContent">社區對話</h2>
 	</div>
-	<p>此「高鐵財務解決方案」得以務實解決台灣高鐵因運量不如原預期、及沉重利息與折攤負擔產生的財務問題，但除此立即可見的效益外，特許期從35年延長至70年，意味著在治理、營運、發展規劃上，將更傾向從長期發展的角度來進行評估及決策，為永續發展打下更深的地基。當然，除能進一步落實永續思維外，此財務解決方案亦可達到全民、政府、銀行、股東四贏之結果。</p>	
 
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">國際會議-國際高速鐵路協會（IHRA）年會</h2>
-	</div>
-	<p>「國際高速鐵路協會」（IHRA, International High-Speed Rail Association）第五次年度會議於2016年5月11日首度在臺北舉辦，共有來自日本、澳洲、印度、美國、新加坡、馬來西亞、泰國、越南等國，50餘位國內外高速鐵路營運業者、專家以及政府相關部門共同參加。台灣高鐵與各國鐵道同業分享過去十餘年來的成功經驗，並與有意規劃高鐵建設的國家共同合作。
+	<p>我們關心台灣土地與沿線居民，各車站業務專員不定期參與活動，與地方意見領袖和居民溝通。同時持續透過環境管理系統，執行環境監測及環境保護工作，使環保防治項目皆符合法令要求。針對目前沿線居民最常反應之高鐵橋下環境及噪音問題，定期整理橋下環境及水路設施，並採行住家隔音門窗或加建隔音牆等改善措施，減輕噪音影響。
+	</p>
+	<p>從2007至2016年噪音防制改善費用已達15,434.4萬元，其中隔音牆增設費用12,969.4萬元，住家噪音防制改善費用2,465萬元。就2015年噪音防制費用為134.4萬元，2016年費用為29.6萬元，分別是在噪音符合標準情形下，辦理沿線10處及2處住家之辦理隔音窗改善，具體展現本公司關懷民眾身心健康之企業責任。
 	</p>
 	
-	<img src="http://www.thsrc.com.tw/event/tmp/img/a03-02.jpg" alt="" style="width: 70%">
-
-</div>
-
-
+	<div class="articleTitle">
+		<h2 class="articleTitleContent">水雉復育</h2>
+	</div>
+	<p>台灣高鐵執行臺南官田地區水雉保育工作，除環評承諾事項外，亦全力協助水雉人造棲地營造，並於水雉教育園區成立後，每年持續贊助園區管理單位。自2000年迄今投入六千多萬元，於臺南市官田區打造國內第一個由政府、開發單位及民間社團三方合作的人造棲地復育工程，帶動志工參與，與專家學者配合，使臺南境內水雉族群量明顯增加，水雉人造棲地面積約15公頃，依據臺南市野鳥學會統計資料，已由2000年9隻（雌鳥+雄鳥+雛鳥成長數）大幅成長至2015年239隻，2016年251隻；隨著水雉族群的棲息面積擴大，臺南地區之水雉數量2015年最大成鳥數成長至711隻，2016年成長至1,272隻。</p>
+	
+	
 </article>
 
 </div>
