--- a/public/c02_環境管理.html
+++ b/public/c02_環境管理.html
@@ -136,78 +136,38 @@ a.Interval2:hover { background:#cc6600}
 
 
 <article class="common_article">
-<h1 class="title_h2">永續經營</h1>
-<p>台灣高鐵財務改善方案從2014年10月24日提出後，歷經一連串的法律流程及調整後，於2015 年6 月5 日經立法院院會通過備查，而此版本的「高鐵財務解決方案」及立法院交通委員會附帶決議即成為落實台灣高鐵財務改善之依據及基礎。為讓大眾更了解我們財務方案之變革，展現永續經營的服務精神，下面特以圖說明財務解決方案架構。
-</p>
-
-<h3>財務解決方案架構</h3>
-
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-01.jpg" alt="" style="width: 70%">
-
-<div class="articleTitle">
-	<h2 class="articleTitleContent">財務解決方案執行狀況及時程</h2>
-</div>
-
-<div class="table_desktop">
-	<table >
-		<tr >
-			<th style="width:20%">日期</th>
-			<th style="width:80%">事件</th>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/06/05</td>
-			<td style="width:80%">立法院完成審議「高鐵財務解決方案」並准予備查</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/07/27</td>
-			<td style="width:80%">台灣高鐵與交通部簽署「興建營運合約第四次增修協議書」及「站區開發合約終止協議書」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/03</td>
-			<td style="width:80%">台灣高鐵與交通部、臺灣銀行簽署「三方契約第一次增修協議書」。台灣高鐵與臺灣銀行等銀行團簽署「聯合授信契約第二次增修契約」</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/08/07</td>
-			<td style="width:80%">動用「資金專戶」之資金收回全數特別股股本<br>
-			2015年6 月25 日董事會決議，收回已發行流通在外之全部特別股股本新臺幣40,189,916,600元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/09/10</td>
-			<td style="width:80%">股東臨時會決議通過辦理「高鐵財務解決方案」各項配套措施 <br>
-			辦理減資60%以彌補虧損，減少實收資本額新臺幣39,079,395,890元，減資後實收資本額為新臺幣26,052,930,580元 <br>
-			辦理私募普通股增資新臺幣300億元以充實營運資金並改善財務結構，增資後實收資本額為新臺幣56,052,930,580元</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2015/10/30</td>
-			<td style="width:80%">特許期延長35年開始生效</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/25</td>
-			<td style="width:80%">現金增資，公開發行普通股<br>
-				配合辦理股票初次上市作業，現金增資發行新股2,300萬股，增資後普通股股數由5,605,293,058股，增加為5,628,293,058股</td>
-		</tr>
-		<tr >
-			<td style="width:20%">2016/10/27</td>
-			<td style="width:80%">台灣高鐵上市</td>
-		</tr>
-	</table>
-
+	<h1 class="title_h2">環境管理</h1>
 	<div class="articleTitle">
-		<h2 class="articleTitleContent">永續及社會效益</h2>
+		<h2 class="articleTitleContent">運輸與環境</h2>
 	</div>
-	<p>此「高鐵財務解決方案」得以務實解決台灣高鐵因運量不如原預期、及沉重利息與折攤負擔產生的財務問題，但除此立即可見的效益外，特許期從35年延長至70年，意味著在治理、營運、發展規劃上，將更傾向從長期發展的角度來進行評估及決策，為永續發展打下更深的地基。當然，除能進一步落實永續思維外，此財務解決方案亦可達到全民、政府、銀行、股東四贏之結果。</p>	
 
-	<div class="articleTitle">
-		<h2 class="articleTitleContent">國際會議-國際高速鐵路協會（IHRA）年會</h2>
-	</div>
-	<p>「國際高速鐵路協會」（IHRA, International High-Speed Rail Association）第五次年度會議於2016年5月11日首度在臺北舉辦，共有來自日本、澳洲、印度、美國、新加坡、馬來西亞、泰國、越南等國，50餘位國內外高速鐵路營運業者、專家以及政府相關部門共同參加。台灣高鐵與各國鐵道同業分享過去十餘年來的成功經驗，並與有意規劃高鐵建設的國家共同合作。
+	<p>台灣高鐵是高運載、省能源及低污染的交通運輸系統，提供乘客舒適的旅程服務是我們的經營理念，而環境政策則是我們善盡企業責任的承諾。
 	</p>
+
+	<div class="table_desktop">
+		<table >
+			<tr >
+				<th>台灣高鐵環境政策</th>
+			</tr>
+			<tr>
+				<td>
+					<p>保是台灣高速鐵路股份有限公司之承諾。</p>
+					<p>台灣高鐵願遵守國內相關環保法令，並履行對環保的承諾。</p>
+					<p>台灣高鐵會持續致力於環境績效的改善工作，制定並定期審查環境目標，以確保在辦理高鐵日常營運作業時，採用適當的程序及資源來預防或減輕對環境可能造成的衝擊。</p>
+					<p>台灣高鐵藉由訓練強化員工對於環保相關標準與程序的認知與執行能力。</p>
+					<p>台灣高鐵要求所有廠商，於承辦與台灣高鐵有關的一切工程、作業或活動時，均必須遵守合理可行的環境管理程序。</p>
+					<p>台灣高鐵將秉持開放的態度，持續與政府、乘客以及社會公眾就環境政策與執行成果進行溝通。</p>
+				</td>
+		
+			</tr>		
+			
+		</table>
+	</div>
+
+	<p>我們以環境政策為基礎，建立環境管理組織，落實執行從興建到營運階段整體之環境保護工作。台灣高鐵接受交通部、環保署等政府機關審核與衡量，依據評估結果制定相關降低環境衝擊等措施。</p>
+
+	<p>2015和2016年於環境保護工作上支出之總金額達1.5億元，項目包含環保環評監測（含苗栗、彰化及雲林三站）500萬元，環保環境研究（含水雉復育、噪音研究及土木計畫）650萬元，及環保污染防治（車站及基地廢污水處理及廢棄物處理操作與維護）1.4億元。</p>
 	
-	<img src="http://www.thsrc.com.tw/event/tmp/img/a03-02.jpg" alt="" style="width: 70%">
-
-</div>
-
-
 </article>
 
 </div>
