--- a/public/b02_客戶關係維護.html
+++ b/public/b02_客戶關係維護.html
@@ -136,20 +136,25 @@ a.Interval2:hover { background:#cc6600}
 
 
 <article class="common_article">
-<h1 class="title_h2">重大性議題</h1>
+	
+	<h1 class="title_h2">客戶關係維護</h1>
+	<p>我們以提供乘客暖心服務為中心原則，設有專門負責顧客意見之部門以維繫顧客關係，並希冀利用顧客建議來提升服務品質。我們設立多元管道聆聽顧客意見，包括在客服中心裡除國台語應對外，也配置英語專才，好兼顧外籍顧客之需求。
+	</p>
 
-<p>台灣高鐵企業社會責任報告書參考AA1000當責性原則標準（AA1000 ACCOUNTABILITY PRINCIPLES STANDARD）及全球永續性報告協會（Global Reporting Initiative, GRI）所出版之永續性報告指南（Sustainable Reporting Guideline）第4版（G4）之指引，依據鑑別、排序、確認、檢視等步驟，進行重大性議題分析，以確認報告書揭露範疇，以及公司之內、外部所面臨的重大永續發展挑戰，以全面檢視永續經營成效。
-</p>
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-04.jpg" alt="" style="width: 60%">
+	<img src="images/b14.jpg" alt="">
+	<p style="text-align: center; margin-top: -40px">現行意見蒐集管道及客服作業體系</p>
 
+		<img src="images/b15.jpg" alt="">
+	<p style="text-align: center; margin-top: -40px">現行客訴問題解決機制</p>
+	<p>在顧客資料保護方面，內部系統僅保留敬老與愛心票之身分證字號、出生年月日等資料，其他身分之客戶資料皆不保存，且為保障顧客個人資料，除公告「顧客個人資料保護權益事項」外，也推動多項管理措施，包括「個人資料保護政策」、「個人資料檔案安全維護計畫」，做為個人資料處理作業之準據，確保各單位在日常作業執行過程中，於個人資料之蒐集、處理與利用符合相關法令要求，避免發生缺失情形。我們的「個人資料保護作業執行組」每年定期召開「個人資料保護作業管理會議」，檢討有關個人資料保護事宜。高鐵企業網站特別設有「個人資料保護專區」，公告以上相關文件供社會大眾檢視參考。</p>
+	
+	<img src="images/b16.jpg" alt="">
 
-<p>24個議題中共有14項為重度衝擊、9項為中度衝擊，以及1項為低度衝擊。其中「重度衝擊」與「中度衝擊」之議題為本報告書的重大性揭露範疇，低度衝擊中的項目則視為非重大性議題，原則上將不在本報告書中進行揭露，但若非重大性議題會影響重大性議題之呈現，則仍會在報告書中做適度的說明與揭露。</p>
-<p>另外，我們也依據重大性議題的內容，對應出相關GRI的指標，並且歸類出6項屬於台灣高鐵的專屬議題，於報告書中回應。</p>
-
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-03.jpg" alt="" style="width: 80%">
-
-
+	
 </article>
+
+
+
 
 </div>
 
