--- a/public/b03_客戶關係維護.html
+++ b/public/b03_客戶關係維護.html
@@ -136,19 +136,19 @@ a.Interval2:hover { background:#cc6600}
 
 
 <article class="common_article">
-<h1 class="title_h2">重大性議題</h1>
+	<h1 class="title_h2">顧客肯定</h1>
+	
+	<p>台灣高鐵品質管理的三個核心主軸之一即為顧客服務，並設立一系列對應的量化績效指標，每季追蹤。自2007年通車起，每年均委託第三方單位進行顧客滿意度調查。依據當次搭乘高鐵的旅客為對象，透過問卷，瞭解旅客對我們所提供的各項服務滿意度的評分（5分「非常滿意」，1分「非常不滿意」。滿意度係回答5分與4分所占百分比），定期追蹤執行狀況，列為未來改善的規劃考量。</p>
 
-<p>台灣高鐵企業社會責任報告書參考AA1000當責性原則標準（AA1000 ACCOUNTABILITY PRINCIPLES STANDARD）及全球永續性報告協會（Global Reporting Initiative, GRI）所出版之永續性報告指南（Sustainable Reporting Guideline）第4版（G4）之指引，依據鑑別、排序、確認、檢視等步驟，進行重大性議題分析，以確認報告書揭露範疇，以及公司之內、外部所面臨的重大永續發展挑戰，以全面檢視永續經營成效。
-</p>
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-04.jpg" alt="" style="width: 60%">
-
-
-<p>24個議題中共有14項為重度衝擊、9項為中度衝擊，以及1項為低度衝擊。其中「重度衝擊」與「中度衝擊」之議題為本報告書的重大性揭露範疇，低度衝擊中的項目則視為非重大性議題，原則上將不在本報告書中進行揭露，但若非重大性議題會影響重大性議題之呈現，則仍會在報告書中做適度的說明與揭露。</p>
-<p>另外，我們也依據重大性議題的內容，對應出相關GRI的指標，並且歸類出6項屬於台灣高鐵的專屬議題，於報告書中回應。</p>
-
-<img src="http://www.thsrc.com.tw/event/tmp/img/a03-03.jpg" alt="" style="width: 80%">
+	
 
 
+
+13
+
+
+
+	
 </article>
 
 </div>
