--- a/public/a06_利害關係人專區.html
+++ b/public/a06_利害關係人專區.html
@@ -26,14 +26,11 @@
 
 </head>
 
-<!--以上為設計使用,不需要填入後台--> 
 
-
+<!--上稿內容開始-->
 <link href="/content/css/earlybird_preferent.css" rel="stylesheet" type="text" />
-
 <style type="text/css">
-
-  /*=======*/
+/*=======*/
 .common_content_inner h3 { margin-bottom:8px; font-size:15px; color:#db5106;}
 .tb_L { width:378px;}
 .tacle_set { padding-left:14px;}
@@ -127,11 +124,9 @@ a.Interval2:hover { background:#cc6600}
     margin-bottom: 23px;
     clear: both;
 }
-
 </style>
 
 <body>
-	
 <div class="wrapper" style="font-size: 1.25em; line-height: 1.6">
 
 
@@ -147,7 +142,7 @@ a.Interval2:hover { background:#cc6600}
 	<div class="table_desktop">
 	<table >
 		<tr >
-			<th>利害關係人</th>
+			<th style="width:20%">利害關係人</th>
 			<th style="width:20%">溝通管道 </th>
 			<th style="width:20%">2015年重點溝通績效</th>
 			<th style="width:20%">2016年重點溝通績效</th>
@@ -563,6 +558,10 @@ a.Interval2:hover { background:#cc6600}
 
 
 </div>
+<!--上稿內容結束-->
+
+
+
 
 </body>
 </html>
