--- a/public/b01_營運據點與服務.html
+++ b/public/b01_營運據點與服務.html
@@ -138,7 +138,7 @@ a.Interval2:hover { background:#cc6600}
 	<p>現有車站數：12 南港、台北、板橋、桃園、新竹、苗栗、台中、彰化、雲林、嘉義、台南、左營</p>
 	<p>現有基地數：5基地與車站功能不同，可細分為總機廠、調車場、工、電務基地以及維修基地。現有新竹六家基地、台中烏日基地、嘉義太保基地、高雄左營基地及高雄燕巢總機廠，另汐止基地待規劃中。</p>
 
-	<img src="images/b01.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b01.jpg" alt="">
 
 
 	<p>台灣高鐵除提供快捷、便利舒適的鐵路運輸服務外，亦有零售事業和商業空間租賃等附屬事業，藉此創造附加價值，並提升附屬事業收入。我們期許能成為台灣優質便利生活的代言品牌，並兼顧社會責任，為顧客滿意而努力。</p>
@@ -168,10 +168,10 @@ a.Interval2:hover { background:#cc6600}
 	<p>我們的上游廠商主要為提供鐵路車輛、土木營建、軌道相關服務設施設備之製造與維護行業；中游為電力供應業、列車整備相關之運輸輔助業，以及提供轉乘服務之相關業者，如停車場經營管理業、公路客運業、小客車租賃業及計程車客運業等；下游為搭乘台灣高鐵的旅客或是與我們聯合推出高鐵假期的旅行社業者等。
 	</p>
 
-	<img src="images/b02.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b02.jpg" alt="">
 	<p style="text-align: center; margin-top: -50px">2015年全年各通路所佔百分比</p>
 
-	<img src="images/b03.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b03.jpg" alt="">
 	<p style="text-align: center; margin-top: -50px">2016年全年各通路所佔百分比</p>
 
 	<p>台灣高鐵持續致力於拓展多元的售票管道，為提升服務質感而努力，除確保傳統購票通路運作順暢，亦響應行動支付，研擬更便利的票務服務。如台灣高鐵APP「T-EX 行動購票」上線至今已近5 年，亦不斷更新功能以提升使用便利性。我們亦持續精進車站售票作業流程及規劃，好縮短旅客等候時間。如為縮短台北車站排隊等候時間，我們於2016年開始分階段導入因應作為。</p>
@@ -191,7 +191,7 @@ a.Interval2:hover { background:#cc6600}
 						<p>於排隊區增加「行動服務人員」，協助排隊旅客填寫「購票行程資訊單」，於購票時出示，縮短櫃檯溝通時間</p>
 						<p>調整櫃位配置並增設快速購票櫃台</p>
 						<p>行動服務人員協助排隊旅客填寫購票行程資訊單</p>
-						<img src="images/b04.jpg" alt="">
+						<img src="http://www.thsrc.com.tw/event/tmp/img/b04.jpg" alt="">
 					</td>
 					<td>
 						<p>2016年4月25日起調整櫃位配置，旅客平均排隊等候時間均可於 10~12分鐘之內抵窗口開始購票</p>
@@ -204,7 +204,7 @@ a.Interval2:hover { background:#cc6600}
 						<p>於臺北捷運付費區增設10 台自動售票機（TVM），使捷運轉搭高鐵的旅客，出捷運站前即可購取高鐵車票，出站後可直接進高鐵閘門乘車</p>
 						<p>增加3個售票櫃台</p>
 						<p>
-							<img src="images/b05.jpg" alt="">
+							<img src="http://www.thsrc.com.tw/event/tmp/img/b05.jpg" alt="">
 						</p>
 					</td>
 					<td>
@@ -217,8 +217,8 @@ a.Interval2:hover { background:#cc6600}
 					<td>
 						<p>建置車站「行動服務人員」平板App系統，將人工作業模式轉由平板電腦 App 執行，並增加訂位功能</p>
 						<p>外場人員可透過平板 App 完成訂位，列印「高鐵臨時取票代碼單」，旅客於窗口時出示、付款及取票，旅客亦可逕至 TVM 付款取票</p>
-						<img src="images/b06.jpg" alt="">
-						<img src="images/b07.jpg" alt="">
+						<img src="http://www.thsrc.com.tw/event/tmp/img/b06.jpg" alt="">
+						<img src="http://www.thsrc.com.tw/event/tmp/img/b07.jpg" alt="">
 					</td>
 					<td>
 						<p>2016年4月25日起調整櫃位配置，旅客平均排隊等候時間均可於 10~12分鐘之內抵窗口開始購票</p>
@@ -250,11 +250,11 @@ a.Interval2:hover { background:#cc6600}
 		<table >
 			<tr >
 				<td>
-					<img src="images/b08.jpg" alt="">
+					<img src="http://www.thsrc.com.tw/event/tmp/img/b08.jpg" alt="">
 					<p>SMIS系統畫面</p>
 				</td>
 				<td>
-					<img src="images/b09.jpg" alt="">
+					<img src="http://www.thsrc.com.tw/event/tmp/img/b09.jpg" alt="">
 					<p>SMIS之經濟部專利證書</p> 
 				</td>
 			</tr>
@@ -266,12 +266,12 @@ a.Interval2:hover { background:#cc6600}
 	</div>
 	<p>台灣高鐵配合4T策略，推動「搭高鐵‧遊台灣」旅遊產品，整合各地觀光資源，建立旅遊資訊平台，與國內觀光業者合作推出可訂、付、取、退全面電子化的旅遊套裝產品，目前共推出超過990種套裝行程。</p>
 	
-	<img src="images/b10.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b10.jpg" alt="">
 	<p style="text-align: center; margin-top: -40px">互動式轉乘資訊查詢機</p>
 
 	<h6 class="articleTitleContent">轉運服務</h6>
 	<p>台灣高鐵轉乘服務搭配大眾交通工具，在每個營運據點提供旅客接駁服務，並且製作各車站轉乘地圖、建置轉乘資訊系統，並於高鐵企業網站提供各車站轉乘資訊查詢。</p>
-	<img src="images/b11.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b11.jpg" alt="">
 	<p style="text-align: center; margin-top: -40px">快捷公車轉運人次</p>
 
 	<p>在2016年因應復興航空歇業，為了讓旅客可以順利前往花蓮，依據高鐵與臺鐵互相接駁之適當班次，製作「台北-花蓮雙鐵轉乘時刻表」，放置於車站服務台，提供旅客參考。</p>
@@ -313,13 +313,13 @@ a.Interval2:hover { background:#cc6600}
 	<h6>班表政策與疏運</h6>
 	<p>台灣高鐵目前可提供運轉服務的列車計34組，列車時刻表規劃係配合不同時段之旅運需求，盡量將列車組資源投入載客之營運，提供最大運能以滿足高鐵旅運需求</p>
 
-	<img src="images/b12.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b12.jpg" alt="">
 	<p style="text-align: center; margin-top: -50px">營運績效表</p>
 	
 	<p>本公司各疏運計畫皆經過嚴謹的內部程序制定，並提報交通部備查後執行，2015和2016年計有元旦、春節、和平紀念日、清明節、勞動節、母親節、端午節、中秋節、國慶日等重要疏運計畫，總計2015年及2016年共分別疏運839.5萬人次及1,160.4萬人次。
 	</p>
 
-	<img src="images/b13.jpg" alt="">
+	<img src="http://www.thsrc.com.tw/event/tmp/img/b13.jpg" alt="">
 	<p style="text-align: center; margin-top: -50px">疏運規劃與執行圖</p>
 
 
