--- a/public/c03_能源與廢棄物管理.html
+++ b/public/c03_能源與廢棄物管理.html
@@ -170,11 +170,11 @@ a.Interval2:hover { background:#cc6600}
 		<table >
 			<tr >
 				<th>
-					<img src="images/b17.jpg" alt="">
+					<img src="http://www.thsrc.com.tw/event/tmp/img/b17.jpg" alt="">
 					<p style="text-align: center; margin-top: -40px">碳足跡標籤</p>
 				</th>
 				<th>
-					<img src="images/b18.jpg" alt="">
+					<img src="http://www.thsrc.com.tw/event/tmp/img/b18.jpg" alt="">
 					<p style="text-align: center; margin-top: -40px">碳足跡標籤證書授證典禮</p>
 				</th>
 			</tr>
