--- a/public/a06_利害關係人專區.html
+++ b/public/a06_利害關係人專區.html
@@ -141,7 +141,7 @@ a.Interval2:hover { background:#cc6600}
 	<h3>重要利害關係人溝通績效</h3>
 	<div class="table_desktop">
 	<table >
-		<tr >
+		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
 			<th style="width:20%">利害關係人</th>
 			<th style="width:20%">溝通管道 </th>
 			<th style="width:20%">2015年重點溝通績效</th>
@@ -548,6 +548,7 @@ a.Interval2:hover { background:#cc6600}
 			<div class="clear" style="height: 10px"></div>	
 			<a href="#" class="submit_m">送出</a>
 
+			<div class="clear"></div>	
           </div>
 		</section>
 	</section>
